OO-5467: File upload for assessment documents in group task